<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context="app.com.thetechnocafe.hirecall.Features.CreateJob.CreateJobActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:theme="@style/WhiteOptionsToolbarMenu"
            app:title="@string/create_job"
            app:titleTextColor="@android:color/white">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <AutoCompleteTextView
                android:id="@+id/client_name_auto_complete_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/client_name" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/other_client_name_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/other_client_name"
                android:visibility="gone">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/other_client_name_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text|textCapWords" />

            </android.support.design.widget.TextInputLayout>

            <AutoCompleteTextView
                android:id="@+id/primary_skill_auto_complete_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/primary_skill" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/primary_skill_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/other_primary_skill"
                android:visibility="gone">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/primary_skill_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text|textCapWords" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/job_location_area_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/job_location_area">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/job_location_area_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/job_location_city_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/job_location_city">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/job_location_city_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/min_expense_text_input_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:hint="@string/min_expense">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/min_expense_text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/max_expense_text_input_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:hint="@string/max_expense">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/max_expense_text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/invite_colleague_text_input_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:hint="@string/invite_colleague">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/invite_colleague_text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/add_email_button"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="0.3"
                    android:background="@drawable/background_button_blue"
                    android:text="Add Email"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/email_container_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

            </LinearLayout>

            <Button
                android:id="@+id/create_job_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_button_green"
                android:text="@string/create_job"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
